// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ServerList renders correctly 1`] = `
<div>
  <ListWrapper
    columns={
      [
        {
          "key": "column1",
          "title": "Column1",
        },
      ]
    }
    data={
      [
        {
          "column1": 0,
          "key": "0",
        },
        {
          "column1": 1,
          "key": "1",
        },
        {
          "column1": 2,
          "key": "2",
        },
        {
          "column1": 3,
          "key": "3",
        },
        {
          "column1": 4,
          "key": "4",
        },
      ]
    }
    onSortChange={[Function]}
    sortColumn={null}
    sortDirection="ASC"
  />
</div>
`;

exports[`ServerList renders errors correctly 1`] = `
<div>
  <ListWrapper
    columns={
      [
        {
          "key": "column1",
          "title": "Column1",
        },
      ]
    }
    data={[]}
    onSortChange={[Function]}
    sortColumn={null}
    sortDirection="ASC"
  />
</div>
`;

exports[`ServerList renders pagination correctly 1`] = `
<div>
  <ListWrapper
    columns={
      [
        {
          "key": "column1",
          "title": "Column1",
        },
      ]
    }
    data={
      [
        {
          "column1": 0,
          "key": "0",
        },
        {
          "column1": 1,
          "key": "1",
        },
        {
          "column1": 2,
          "key": "2",
        },
        {
          "column1": 3,
          "key": "3",
        },
        {
          "column1": 4,
          "key": "4",
        },
        {
          "column1": 5,
          "key": "5",
        },
        {
          "column1": 6,
          "key": "6",
        },
        {
          "column1": 7,
          "key": "7",
        },
        {
          "column1": 8,
          "key": "8",
        },
        {
          "column1": 9,
          "key": "9",
        },
        {
          "column1": 10,
          "key": "10",
        },
        {
          "column1": 11,
          "key": "11",
        },
        {
          "column1": 12,
          "key": "12",
        },
        {
          "column1": 13,
          "key": "13",
        },
        {
          "column1": 14,
          "key": "14",
        },
        {
          "column1": 15,
          "key": "15",
        },
        {
          "column1": 16,
          "key": "16",
        },
        {
          "column1": 17,
          "key": "17",
        },
        {
          "column1": 18,
          "key": "18",
        },
        {
          "column1": 19,
          "key": "19",
        },
        {
          "column1": 20,
          "key": "20",
        },
        {
          "column1": 21,
          "key": "21",
        },
        {
          "column1": 22,
          "key": "22",
        },
        {
          "column1": 23,
          "key": "23",
        },
        {
          "column1": 24,
          "key": "24",
        },
      ]
    }
    onSortChange={[Function]}
    sortColumn={null}
    sortDirection="ASC"
  />
  <Pagination
    current={1}
    onSelect={[Function]}
    total={3}
  />
</div>
`;

exports[`ServerList renders sort correctly 1`] = `
<div>
  <ListWrapper
    columns={
      [
        {
          "key": "column1",
          "title": "Column1",
        },
      ]
    }
    data={
      [
        {
          "column1": 0,
          "key": "0",
        },
        {
          "column1": 1,
          "key": "1",
        },
        {
          "column1": 2,
          "key": "2",
        },
        {
          "column1": 3,
          "key": "3",
        },
        {
          "column1": 4,
          "key": "4",
        },
        {
          "column1": 5,
          "key": "5",
        },
        {
          "column1": 6,
          "key": "6",
        },
        {
          "column1": 7,
          "key": "7",
        },
        {
          "column1": 8,
          "key": "8",
        },
        {
          "column1": 9,
          "key": "9",
        },
        {
          "column1": 10,
          "key": "10",
        },
        {
          "column1": 11,
          "key": "11",
        },
        {
          "column1": 12,
          "key": "12",
        },
        {
          "column1": 13,
          "key": "13",
        },
        {
          "column1": 14,
          "key": "14",
        },
        {
          "column1": 15,
          "key": "15",
        },
        {
          "column1": 16,
          "key": "16",
        },
        {
          "column1": 17,
          "key": "17",
        },
        {
          "column1": 18,
          "key": "18",
        },
        {
          "column1": 19,
          "key": "19",
        },
        {
          "column1": 20,
          "key": "20",
        },
        {
          "column1": 21,
          "key": "21",
        },
        {
          "column1": 22,
          "key": "22",
        },
        {
          "column1": 23,
          "key": "23",
        },
        {
          "column1": 24,
          "key": "24",
        },
      ]
    }
    onSortChange={[Function]}
    sortColumn="column1"
    sortDirection="ASC"
  />
  <Pagination
    current={1}
    onSelect={[Function]}
    total={3}
  />
</div>
`;
